--- a/notebooks/eda_and_preprocessing.ipynb
+++ b/notebooks/eda_and_preprocessing.ipynb
@@ -9,11 +9,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "from sklearn.preprocessing import MinMaxScaler"
    ]
   },
   {
@@ -25,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +114,7 @@
        "2599  2015-04-08  23088.0  23088.0  22854.0  23088.0"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -168,35 +172,35 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>02/04/2015</th>\n",
+       "      <th>2015-04-02</th>\n",
        "      <td>22956.0</td>\n",
        "      <td>22956.0</td>\n",
        "      <td>22956.0</td>\n",
        "      <td>22956.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>05/04/2015</th>\n",
+       "      <th>2015-04-05</th>\n",
        "      <td>22956.0</td>\n",
        "      <td>22956.0</td>\n",
        "      <td>22956.0</td>\n",
        "      <td>22956.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>06/04/2015</th>\n",
+       "      <th>2015-04-06</th>\n",
        "      <td>22956.0</td>\n",
        "      <td>23060.0</td>\n",
        "      <td>22956.0</td>\n",
        "      <td>22956.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>07/04/2015</th>\n",
+       "      <th>2015-04-07</th>\n",
        "      <td>23060.0</td>\n",
        "      <td>23088.0</td>\n",
        "      <td>23060.0</td>\n",
        "      <td>23060.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>08/04/2015</th>\n",
+       "      <th>2015-04-08</th>\n",
        "      <td>23088.0</td>\n",
        "      <td>23088.0</td>\n",
        "      <td>22854.0</td>\n",
@@ -209,14 +213,14 @@
       "text/plain": [
        "               open     high      low    close\n",
        "timestamp                                     \n",
-       "02/04/2015  22956.0  22956.0  22956.0  22956.0\n",
-       "05/04/2015  22956.0  22956.0  22956.0  22956.0\n",
-       "06/04/2015  22956.0  23060.0  22956.0  22956.0\n",
-       "07/04/2015  23060.0  23088.0  23060.0  23060.0\n",
-       "08/04/2015  23088.0  23088.0  22854.0  23088.0"
+       "2015-04-02  22956.0  22956.0  22956.0  22956.0\n",
+       "2015-04-05  22956.0  22956.0  22956.0  22956.0\n",
+       "2015-04-06  22956.0  23060.0  22956.0  22956.0\n",
+       "2015-04-07  23060.0  23088.0  23060.0  23060.0\n",
+       "2015-04-08  23088.0  23088.0  22854.0  23088.0"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,11 +228,9 @@
    "source": [
     "df['timestamp'] = pd.to_datetime(df['timestamp'])\n",
     "\n",
-    "df = df.set_index(df['timestamp'].dt.strftime('%d/%m/%Y'))\n",
+    "df = df.set_index('timestamp')\n",
     "\n",
-    "df = df.drop('timestamp', axis=1)\n",
-    "\n",
-    "df.head()\n"
+    "df.head()"
    ]
   },
   {
@@ -247,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -272,42 +274,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Thiếu**"
+    "**Những ngày thiếu**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Những ngày thiếu: DatetimeIndex(['2015-04-01', '2015-04-02', '2015-04-03', '2015-04-04',\n",
-      "               '2015-04-05', '2015-04-06', '2015-04-07', '2015-04-08',\n",
-      "               '2015-04-09', '2015-04-10',\n",
-      "               ...\n",
-      "               '2025-03-23', '2025-03-24', '2025-03-25', '2025-03-26',\n",
-      "               '2025-03-27', '2025-03-28', '2025-03-29', '2025-03-30',\n",
-      "               '2025-03-31', '2025-04-01'],\n",
-      "              dtype='datetime64[ns]', length=3654, freq='D')\n"
-     ]
-    }
-   ],
-   "source": [
-    "full_range = pd.date_range(start='2015-04-01', end='2025-04-01', freq='D')\n",
-    "\n",
-    "existing_dates = df.index\n",
-    "\n",
-    "missing_dates = full_range.difference(existing_dates)\n",
-    "\n",
-    "print(\"Những ngày thiếu:\", missing_dates)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -321,27 +293,12 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "\n",
-    "# Đọc dữ liệu\n",
-    "df = pd.read_csv(\"../data/raw/EUR_VND_Exchange_Rate.csv\")[::-1]\n",
-    "\n",
-    "# Chuyển cột 'timestamp' thành định dạng datetime\n",
-    "df['timestamp'] = pd.to_datetime(df['timestamp'])\n",
-    "\n",
-    "# Đặt 'timestamp' làm chỉ mục\n",
-    "df = df.set_index('timestamp')\n",
-    "\n",
-    "# Kiểm tra dữ liệu thiếu\n",
     "full_range = pd.date_range(start='2015-04-01', end='2025-04-01', freq='D')\n",
     "\n",
-    "# Chỉ lấy các ngày trong chỉ mục của DataFrame\n",
     "existing_dates = df.index\n",
     "\n",
-    "# Tìm những ngày thiếu\n",
     "missing_dates = full_range.difference(existing_dates)\n",
     "\n",
-    "# In kết quả\n",
     "if missing_dates.empty:\n",
     "    print(\"Không có ngày nào bị thiếu trong dữ liệu.\")\n",
     "else:\n",
@@ -351,8 +308,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Thiếu do nghỉ lễ, T7/CN"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +325,7 @@
        "2604"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,8 +335,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# **Ma trận tương quan**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -387,11 +358,8 @@
     }
    ],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
     "corr_matrix = df.corr()\n",
     "\n",
-    "# Vẽ heatmap bằng seaborn\n",
     "plt.figure(figsize=(10, 6))\n",
     "sns.heatmap(corr_matrix, annot=True, cmap=\"coolwarm\", fmt=\".2f\", linewidths=0.5)\n",
     "plt.title(\"Ma Trận Tương Quan\")\n",
@@ -399,42 +367,185 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "=> Chỉ chọn \"close\""
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def load_and_preprocess_data(file_path, seq_length=30):\n",
-    "    \"\"\"Tải dữ liệu, tạo sequences và giữ lại timestamps cho train/test.\"\"\"\n",
+    "data = df['close']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.DataFrame(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.frame.DataFrame"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# **Chuẩn hóa dữ liệu**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>close</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>timestamp</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2015-04-02</th>\n",
+       "      <td>0.815516</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-04-05</th>\n",
+       "      <td>0.815516</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-04-06</th>\n",
+       "      <td>0.815516</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-04-07</th>\n",
+       "      <td>0.819253</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-04-08</th>\n",
+       "      <td>0.820259</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               close\n",
+       "timestamp           \n",
+       "2015-04-02  0.815516\n",
+       "2015-04-05  0.815516\n",
+       "2015-04-06  0.815516\n",
+       "2015-04-07  0.819253\n",
+       "2015-04-08  0.820259"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scaler = MinMaxScaler(feature_range=(0, 1))\n",
+    "data_scaled = scaler.fit_transform(data)\n",
+    "\n",
+    "df_scaled = pd.DataFrame(data_scaled, index=data.index, columns=['close'])\n",
+    "\n",
+    "df_scaled.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_scaled.to_csv(\"../data/processed/EUR_VND_Exchange_Rate.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def load_and_preprocess_data(file_path, seq_length=30):\n",
+    "#     \"\"\"Tải dữ liệu, tạo sequences và giữ lại timestamps cho train/test.\"\"\"\n",
     "    \n",
-    "    data = pd.read_csv(file_path, parse_dates=[\"timestamp\"])\n",
+    "#     data = pd.read_csv(file_path, parse_dates=[\"timestamp\"])\n",
     "\n",
-    "    timestamps = data[\"timestamp\"].values  \n",
-    "    values = data[\"close\"].fillna(0).astype(np.float32).values\n",
+    "#     timestamps = data[\"timestamp\"].values  \n",
+    "#     values = data[\"close\"].fillna(0).astype(np.float32).values\n",
     "\n",
-    "    train_size = int(len(values) * 0.8)\n",
-    "    train_values, test_values = values[:train_size], values[train_size:]\n",
-    "    train_timestamps, test_timestamps = timestamps[:train_size], timestamps[train_size:]\n",
+    "#     train_size = int(len(values) * 0.8)\n",
+    "#     train_values, test_values = values[:train_size], values[train_size:]\n",
+    "#     train_timestamps, test_timestamps = timestamps[:train_size], timestamps[train_size:]\n",
     "\n",
-    "    def create_sequences(values, timestamps):\n",
-    "        \"\"\"Tạo sequences với timestamps tương ứng.\"\"\"\n",
-    "        if len(values) <= seq_length:\n",
-    "            print(\"Dữ liệu quá ngắn! Không thể tạo sequences.\")\n",
-    "            return np.array([]), np.array([]), []\n",
+    "#     def create_sequences(values, timestamps):\n",
+    "#         \"\"\"Tạo sequences với timestamps tương ứng.\"\"\"\n",
+    "#         if len(values) <= seq_length:\n",
+    "#             print(\"Dữ liệu quá ngắn! Không thể tạo sequences.\")\n",
+    "#             return np.array([]), np.array([]), []\n",
     "\n",
-    "        X, y, y_timestamps = [], [], []\n",
-    "        for i in range(len(values) - seq_length):\n",
-    "            X.append(values[i : i + seq_length])\n",
-    "            y.append(values[i + seq_length])\n",
-    "            y_timestamps.append(pd.to_datetime(timestamps[i + seq_length]).date())\n",
+    "#         X, y, y_timestamps = [], [], []\n",
+    "#         for i in range(len(values) - seq_length):\n",
+    "#             X.append(values[i : i + seq_length])\n",
+    "#             y.append(values[i + seq_length])\n",
+    "#             y_timestamps.append(pd.to_datetime(timestamps[i + seq_length]).date())\n",
     "\n",
-    "        return np.array(X, dtype=np.float32), np.array(y, dtype=np.float32), np.array(y_timestamps)\n",
+    "#         return np.array(X, dtype=np.float32), np.array(y, dtype=np.float32), np.array(y_timestamps)\n",
     "\n",
     "\n",
-    "    X_train, y_train, time_train = create_sequences(train_values, train_timestamps)\n",
-    "    X_test, y_test, time_test = create_sequences(test_values, test_timestamps)\n",
+    "#     X_train, y_train, time_train = create_sequences(train_values, train_timestamps)\n",
+    "#     X_test, y_test, time_test = create_sequences(test_values, test_timestamps)\n",
     "\n",
-    "    return X_train, y_train, time_train, X_test, y_test, time_test"
+    "#     return X_train, y_train, time_train, X_test, y_test, time_test"
    ]
   }
  ],
