--- a/notebooks/lstm.ipynb
+++ b/notebooks/lstm.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -57,79 +57,61 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>timestamp</th>\n",
-       "      <th>open</th>\n",
-       "      <th>high</th>\n",
-       "      <th>low</th>\n",
        "      <th>close</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2025-04-01</td>\n",
-       "      <td>27649.0</td>\n",
-       "      <td>27703.0</td>\n",
-       "      <td>27622.0</td>\n",
-       "      <td>27650.0</td>\n",
+       "      <td>2020-04-01</td>\n",
+       "      <td>0.536539</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2025-03-31</td>\n",
-       "      <td>27675.0</td>\n",
-       "      <td>27675.0</td>\n",
-       "      <td>27570.0</td>\n",
-       "      <td>27646.0</td>\n",
+       "      <td>2020-04-02</td>\n",
+       "      <td>0.526992</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2025-03-28</td>\n",
-       "      <td>27588.0</td>\n",
-       "      <td>27670.0</td>\n",
-       "      <td>27515.0</td>\n",
-       "      <td>27658.0</td>\n",
+       "      <td>2020-04-05</td>\n",
+       "      <td>0.472835</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2025-03-27</td>\n",
-       "      <td>27508.0</td>\n",
-       "      <td>27603.0</td>\n",
-       "      <td>27505.0</td>\n",
-       "      <td>27592.0</td>\n",
+       "      <td>2020-04-06</td>\n",
+       "      <td>0.450963</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2025-03-26</td>\n",
-       "      <td>27612.0</td>\n",
-       "      <td>27618.0</td>\n",
-       "      <td>27451.0</td>\n",
-       "      <td>27469.0</td>\n",
+       "      <td>2020-04-07</td>\n",
+       "      <td>0.483597</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    timestamp     open     high      low    close\n",
-       "0  2025-04-01  27649.0  27703.0  27622.0  27650.0\n",
-       "1  2025-03-31  27675.0  27675.0  27570.0  27646.0\n",
-       "2  2025-03-28  27588.0  27670.0  27515.0  27658.0\n",
-       "3  2025-03-27  27508.0  27603.0  27505.0  27592.0\n",
-       "4  2025-03-26  27612.0  27618.0  27451.0  27469.0"
+       "    timestamp     close\n",
+       "0  2020-04-01  0.536539\n",
+       "1  2020-04-02  0.526992\n",
+       "2  2020-04-05  0.472835\n",
+       "3  2020-04-06  0.450963\n",
+       "4  2020-04-07  0.483597"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(\"../data/raw/EUR_VND_Exchange_Rate.csv\")\n",
+    "df = pd.read_csv(\"../data/processed/EUR_VND_Exchange_Rate.csv\")\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -137,10 +119,10 @@
      "evalue": "name 'load_and_preprocess_data' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m X_train, y_train, time_train, X_test, y_test, time_test \u001b[38;5;241m=\u001b[39m \u001b[43mload_and_preprocess_data\u001b[49m(\n\u001b[0;32m      2\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m../data/raw/EUR_VND_Exchange_Rate.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m, seq_length\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m30\u001b[39m\n\u001b[0;32m      3\u001b[0m )\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mlen\u001b[39m(X_train), \u001b[38;5;28mlen\u001b[39m(X_test))\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'load_and_preprocess_data' is not defined"
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[9]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m X_train, y_train, time_train, X_test, y_test, time_test = \u001b[43mload_and_preprocess_data\u001b[49m(\n\u001b[32m      2\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33m../data/raw/EUR_VND_Exchange_Rate.csv\u001b[39m\u001b[33m\"\u001b[39m, seq_length=\u001b[32m30\u001b[39m\n\u001b[32m      3\u001b[39m )\n\u001b[32m      4\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mlen\u001b[39m(X_train), \u001b[38;5;28mlen\u001b[39m(X_test))\n",
+      "\u001b[31mNameError\u001b[39m: name 'load_and_preprocess_data' is not defined"
      ]
     }
    ],
@@ -255,7 +237,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
