--- a/notebooks/lstm.ipynb
+++ b/notebooks/lstm.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -56,90 +56,137 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>timestamp</th>\n",
-       "      <th>close</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Transfer</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>2020-04-01</td>\n",
-       "      <td>0.536539</td>\n",
+       "      <td>0.569770</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2020-04-02</td>\n",
-       "      <td>0.526992</td>\n",
+       "      <td>0.569770</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2020-04-05</td>\n",
-       "      <td>0.472835</td>\n",
+       "      <td>2020-04-03</td>\n",
+       "      <td>0.469007</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2020-04-06</td>\n",
-       "      <td>0.450963</td>\n",
+       "      <td>2020-04-04</td>\n",
+       "      <td>0.469007</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2020-04-07</td>\n",
-       "      <td>0.483597</td>\n",
+       "      <td>2020-04-05</td>\n",
+       "      <td>0.469007</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    timestamp     close\n",
-       "0  2020-04-01  0.536539\n",
-       "1  2020-04-02  0.526992\n",
-       "2  2020-04-05  0.472835\n",
-       "3  2020-04-06  0.450963\n",
-       "4  2020-04-07  0.483597"
+       "         Date  Transfer\n",
+       "0  2020-04-01  0.569770\n",
+       "1  2020-04-02  0.569770\n",
+       "2  2020-04-03  0.469007\n",
+       "3  2020-04-04  0.469007\n",
+       "4  2020-04-05  0.469007"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(\"../data/processed/EUR_VND_Exchange_Rate.csv\")\n",
-    "df.head()"
+    "data = pd.read_csv(\"../data/processed/EUR_VND_Exchange_Rate.csv\")\n",
+    "data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'load_and_preprocess_data' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[9]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m X_train, y_train, time_train, X_test, y_test, time_test = \u001b[43mload_and_preprocess_data\u001b[49m(\n\u001b[32m      2\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33m../data/raw/EUR_VND_Exchange_Rate.csv\u001b[39m\u001b[33m\"\u001b[39m, seq_length=\u001b[32m30\u001b[39m\n\u001b[32m      3\u001b[39m )\n\u001b[32m      4\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mlen\u001b[39m(X_train), \u001b[38;5;28mlen\u001b[39m(X_test))\n",
-      "\u001b[31mNameError\u001b[39m: name 'load_and_preprocess_data' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "X_train, y_train, time_train, X_test, y_test, time_test = load_and_preprocess_data(\n",
-    "    \"../data/raw/EUR_VND_Exchange_Rate.csv\", seq_length=30\n",
-    ")\n",
-    "print(len(X_train), len(X_test))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train"
+    "timestamps = data[\"Date\"].values  \n",
+    "values = data[\"Transfer\"].fillna(0).astype(np.float32).values\n",
+    "\n",
+    "train_size = int(len(values) * 0.8)\n",
+    "train_values, test_values = values[:train_size], values[train_size:]\n",
+    "train_timestamps, test_timestamps = timestamps[:train_size], timestamps[train_size:]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seq_length = 30\n",
+    "def create_sequences(values, timestamps):\n",
+    "        \"\"\"Tạo sequences với timestamps tương ứng.\"\"\"\n",
+    "        if len(values) <= seq_length:\n",
+    "            print(\"Dữ liệu quá ngắn! Không thể tạo sequences.\")\n",
+    "            return np.array([]), np.array([]), []\n",
+    "\n",
+    "        X, y, y_timestamps = [], [], []\n",
+    "        for i in range(len(values) - seq_length):\n",
+    "            X.append(values[i : i + seq_length])\n",
+    "            y.append(values[i + seq_length])\n",
+    "            y_timestamps.append(pd.to_datetime(timestamps[i + seq_length]).date())\n",
+    "\n",
+    "        return np.array(X, dtype=np.float32), np.array(y, dtype=np.float32), np.array(y_timestamps)\n",
+    "\n",
+    "\n",
+    "X_train, y_train, time_train = create_sequences(train_values, train_timestamps)\n",
+    "X_test, y_test, time_test = create_sequences(test_values, test_timestamps)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1431, 30)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(336, 30)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_test.shape"
    ]
   },
   {
@@ -151,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,14 +236,15 @@
     "\n",
     "    return model\n",
     "\n",
-    "def train_lstm(X_train, y_train, X_test, y_test, seq_length, model_path):\n",
+    "def train_lstm(X_train, y_train, X_test, y_test, seq_length, model_path, project_name):\n",
     "    \"\"\"Huấn luyện và lưu mô hình LSTM sử dụng hyperparameter tuning.\"\"\"\n",
     "    tuner = kt.RandomSearch(\n",
     "        lambda hp: build_lstm_model(hp, seq_length),\n",
     "        objective=\"val_loss\",\n",
     "        max_trials=10,\n",
     "        executions_per_trial=2,\n",
-    "        directory=r\"C:\\Users\\DELL\\Downloads\\KÌ 2 (2024 - 2025)\\Phân tích chuỗi thời gian\\Project\\models\",\n",
+    "        directory=r\"C:\\Users\\DELL\\Downloads\\eur-vnd-exchange-rate\\models\",\n",
+    "        project_name=project_name\n",
     "    )\n",
     "\n",
     "    early_stopping = EarlyStopping(monitor=\"val_loss\", patience=10, restore_best_weights=True)\n",
@@ -215,13 +263,136 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Trial 1 Complete [00h 02m 53s]\n",
+      "val_loss: 0.37295906245708466\n",
+      "\n",
+      "Best val_loss So Far: 0.37295906245708466\n",
+      "Total elapsed time: 00h 02m 53s\n",
+      "\n",
+      "Search: Running Trial #2\n",
+      "\n",
+      "Value             |Best Value So Far |Hyperparameter\n",
+      "64                |32                |lstm_units_1\n",
+      "0.001             |0.1               |l2_reg\n",
+      "0.2               |0.4               |dropout_1\n",
+      "48                |80                |lstm_units_2\n",
+      "0.4               |0.4               |dropout_2\n",
+      "32                |64                |dense_units\n",
+      "0.001             |0.0001            |learning_rate\n",
+      "\n",
+      "Epoch 1/50\n",
+      "\u001b[1m45/45\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 65ms/step - loss: 1.0104 - mae: 0.7276"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:You are saving your model as an HDF5 file via `model.save()` or `keras.saving.save_model(model)`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')` or `keras.saving.save_model(model, 'my_model.keras')`. \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m45/45\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m19s\u001b[0m 117ms/step - loss: 1.0036 - mae: 0.7242 - val_loss: 0.4127 - val_mae: 0.5559\n",
+      "Epoch 2/50\n",
+      "\u001b[1m45/45\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 67ms/step - loss: 0.4112 - mae: 0.4242"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:You are saving your model as an HDF5 file via `model.save()` or `keras.saving.save_model(model)`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')` or `keras.saving.save_model(model, 'my_model.keras')`. \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m45/45\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 86ms/step - loss: 0.4106 - mae: 0.4237 - val_loss: 0.3795 - val_mae: 0.5257\n",
+      "Epoch 3/50\n",
+      "\u001b[1m44/45\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m━\u001b[0m \u001b[1m0s\u001b[0m 64ms/step - loss: 0.2966 - mae: 0.3362"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:You are saving your model as an HDF5 file via `model.save()` or `keras.saving.save_model(model)`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')` or `keras.saving.save_model(model, 'my_model.keras')`. \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m45/45\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 79ms/step - loss: 0.2956 - mae: 0.3357 - val_loss: 0.3305 - val_mae: 0.4816\n",
+      "Epoch 4/50\n",
+      "\u001b[1m43/45\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m━\u001b[0m \u001b[1m0s\u001b[0m 45ms/step - loss: 0.2463 - mae: 0.3025"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:You are saving your model as an HDF5 file via `model.save()` or `keras.saving.save_model(model)`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')` or `keras.saving.save_model(model, 'my_model.keras')`. \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m45/45\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 51ms/step - loss: 0.2455 - mae: 0.3016 - val_loss: 0.2480 - val_mae: 0.3924\n",
+      "Epoch 5/50\n",
+      "\u001b[1m43/45\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m━\u001b[0m \u001b[1m0s\u001b[0m 31ms/step - loss: 0.1976 - mae: 0.2523"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:You are saving your model as an HDF5 file via `model.save()` or `keras.saving.save_model(model)`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')` or `keras.saving.save_model(model, 'my_model.keras')`. \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m45/45\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 37ms/step - loss: 0.1969 - mae: 0.2515 - val_loss: 0.2387 - val_mae: 0.3849\n",
+      "Epoch 6/50\n",
+      "\u001b[1m45/45\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 20ms/step - loss: 0.1857 - mae: 0.2428"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:You are saving your model as an HDF5 file via `model.save()` or `keras.saving.save_model(model)`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')` or `keras.saving.save_model(model, 'my_model.keras')`. \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m45/45\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 26ms/step - loss: 0.1854 - mae: 0.2426 - val_loss: 0.1852 - val_mae: 0.3131\n",
+      "Epoch 7/50\n",
+      "\u001b[1m43/45\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m━\u001b[0m \u001b[1m0s\u001b[0m 18ms/step - loss: 0.1607 - mae: 0.2117"
+     ]
+    }
+   ],
    "source": [
     "best_hp = train_lstm(\n",
     "    X_train, y_train, \n",
     "    X_test, y_test, \n",
     "    seq_length=30, \n",
-    "    model_path=r\"C:\\Users\\DELL\\Downloads\\KÌ 2 (2024 - 2025)\\Phân tích chuỗi thời gian\\Project\\models\\best_lstm.h5\", \n",
+    "    model_path=r\"C:\\Users\\DELL\\Downloads\\eur-vnd-exchange-rate\\models\\best_lstm.h5\", \n",
+    "    project_name=\"LSTM\"\n",
     ")"
    ]
   },
@@ -229,7 +400,19 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'best_hp' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[32]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mbest_hp\u001b[49m.values\n",
+      "\u001b[31mNameError\u001b[39m: name 'best_hp' is not defined"
+     ]
+    }
+   ],
    "source": [
     "best_hp.values"
    ]
